# env_monitor

./: .gitmodules  CMakeLists.txt  STM32F401XX_FLASH.ld
cmake/: dependencies.cmake  freertos.cmake  lvgl.cmake  rtt.cmake  sensirion.cmake  stm32_cmsis.cmake  stm32_core.cmake  stm32_hal.cmake
config/: FreeRTOSConfig.h  SEGGER_RTT_Conf.h  lv_conf.h  stm32f4xx_hal_conf.h
lib/sensirion-i2c/port/: sensirion_i2c_hal.c
lib/sensirion-i2c/src/: scd4x_i2c.c
src/app/: main.cpp
src/app/task/: heartbit.hpp  iwdg_feeder.hpp  sensor_reader.hpp
src/bsp/: board.cpp  board.hpp  iwdg.cpp  iwdg.hpp  led.cpp  led.hpp  sensor.cpp  sensor.hpp
src/log/: log.hpp  print_rtt.cpp
src/platform/: cube_generated_init.c  cube_generated_init.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h  syscalls.c
src/rtos/: rtos.hpp  task.hpp
tools/: build.sh  clean.sh  flash.sh  rtt.sh
